syntax = "proto3";

package orders.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
  
service OrdersService {
  rpc ListOrders(google.protobuf.Empty) returns (ListOrdersResponse) {
    option (google.api.http) = { get: "/v1/orders" };
  }

  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "order"
    };
  }
}

message Order {
  string id = 1;
  int32 amount = 2;
  Country country = 3;
  OrderType order_type = 4;
  PacketSize packet_size = 5;
}

enum Country {
  NL = 0;
  DE = 1;
  BE = 2;
}

enum OrderType {
  CLAIM = 0;
  SHIPMENT = 1;
}

enum PacketSize {
  SMALL = 0;
  MEDIUM = 1;
  LARGE = 2;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message CreateOrderRequest {
  Order order = 1;
}

message CreateOrderResponse {
  Order order = 1;
}

message Empty {}